# thyroid-quiz

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  fly.toml  pyproject.toml  railway.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init_users.py  0002_tasks_questions_attempts.py  0003_batches_review_time.py  0004_user_profile_fields.py  0005_physician_title.py  0006_career_stage_other.py
app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  schemas_admin.py  security.py
app/routers/: __init__.py  admin.py  admin_attempts.py  attempts.py  auth.py  tasks.py
app/services/: __init__.py  admin_user_metrics.py  attempt_metrics.py  attempt_views.py  csv_export.py  fna.py  image_compression.py  scoring.py  storage.py
docs/: DESIGN-CHANGELOG.md  DESIGN.md
scripts/: compress_existing_images.py  init_admin.py  restore_data.py  restore_data.sh  seed_fna_task.py
tests/: conftest.py  test_admin.py  test_admin_attempt_metrics.py  test_admin_user_metrics.py  test_attempt_submission.py  test_attempts.py  test_auth.py  test_doctor_result_privacy.py  test_fna_binary_scoring.py  test_health.py  test_image_compression.py  test_quiz_image_preload.py  test_restore_data.py  test_seed_fna_task.py  test_storage.py  test_tasks.py
web/: admin.html  author.html  author_task.html  index.html  login.html  quiz.html  register.html  result.html  styles.css
web/js/: admin.js  admin_attempt_detail.js  api.js  auth.js  author.js  author_task.js  career.js  home.js  profile.js  (+4 more)
(+1 files in other folders)
