[project]
name = "thyroid-quiz"
version = "0.1.0"
description = "甲状腺超声图像在线答题平台"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "bcrypt>=4.2",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI Depends() 常规写法会触发 B008

[tool.pytest.ini_options]
testpaths = ["tests"]
